Fix uses of nsMixedContentEvent::Run in dom/security/nsMixedContentBlocker.cpp
Categories
(Core :: DOM: Navigation, defect, P3)
Tracking
()
Tracking | Status | |
---|---|---|
firefox77 | --- | fixed |
People
(Reporter: djvj, Assigned: tetsuharu)
References
(Blocks 1 open bug)
Details
(Whiteboard: [rm-docshell-tree-item:simple])
Attachments
(1 file)
In file dom/security/nsMixedContentBlocker.cpp
Ensure that this event is dispatched on the same process that contains the DocShell it runs on.
Otherwise, change uses of DocShell tree to use BrowsingContext instad.
Comment 1•1 year ago
|
||
Kannan says replacing nsIDocShellTreeItem calls should block enabling Fission in Nightly (M6).
Updated•1 year ago
|
Assignee | ||
Comment 2•1 year ago
|
||
Updated•1 year ago
|
Comment 3•1 year ago
|
||
kmag, Tetsuharu's nsMixedContentEvent::Run() patch is still waiting for your review. Would you like to load balance this review to someone else?
Tetsuharu, does this bug break the MixedContentBlocker's blocking functionality or just its UI? ckershb says MixedContentBlocker support for Fission should block M5 Dogfooding.
Comment 4•1 year ago
|
||
Correction: ckerschb says mixed content blocking doesn't need to block M5 Dogfooding if we warn potential users before they start testing. Moving this bug back to the M6 Nightly milestone.
Updated•1 year ago
|
Pushed by tetsuharu.ohzeki@gmail.com: https://hg.mozilla.org/integration/autoland/rev/73cc073f9dc7 Fix uses nsIDocShellTreeItem of nsMixedContentEvent::Run(). r=kmag,baku
Assignee | ||
Updated•1 year ago
|
Comment 6•1 year ago
|
||
bugherder |
Description
•