Bug 1597455 - Fix uses nsIDocShellTreeItem of nsMixedContentEvent::Run(). r=kmag,baku

Differential Revision: https://phabricator.services.mozilla.com/D61341

--HG--
extra : moz-landing-system : lando